--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,10 @@
+FROM maven:3.8.1-openjdk-16-slim AS build
+COPY /src /app/src
+COPY /pom.xml /app
+RUN mvn -f /app/pom.xml clean package -Dmaven.test.skip
+
 FROM openjdk:11
 VOLUME /tmp
 EXPOSE 8080
-COPY target/dsmovie-0.0.1-SNAPSHOT.jar dsmovie-0.0.1-SNAPSHOT.jar
-ENTRYPOINT ["java", "-jar", "/dsmovie-0.0.1-SNAPSHOT.jar"]
+COPY --from=build /app/target/*.jar app.jar
+ENTRYPOINT ["java", "-jar", "/app.jar"]
